pin python package versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-jupyter
-pip
-bokeh
-holoviews
+bokeh==1.2.0
+dask==2.1.0
+holoviews-1.12.3
 hvplot
-pandas
-scikit-learn
-panel
 ipython
-pyjanitor
-dask
+jupyter
+pandas==0.24.0
+panel==0.6.0
+pip
+pyjanitor==0.18.0
+scikit-learn==0.21.2
