--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
 - python=3.7
 - biopython=1.74
 - bokeh=1.2.0
-- dask=2.1.0
+- dask=2.6.0
 - holoviews=1.12.3
 - hvplot
 - ipython
@@ -16,3 +16,8 @@ dependencies:
 - panel=0.6.0
 - pyjanitor=0.18.0
 - scikit-learn=0.21.2
+- pytest
+- hypothesis
+- black
+- pylint
+- pycodestyle
